# gfx-samples

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/000_clear/: main.cpp
src/001_triangle/: main.cpp
src/002_vertex_buffer/: main.cpp  vertex.spv
src/003_restructure/: main.cpp
src/004_index_buffer/: main.cpp
src/005_push_constants/: fragment.glsl  main.cpp
vk/: CMakeLists.txt
vk/000_clear/: main.cpp
vk/001_triangle/: fragment.glsl  main.cpp
vk/002_vertex_buffer/: main.cpp
vk/003_restructure/: fragment.glsl  main.cpp
vk/003_restructure/utils/: extensions.hpp  queue_families.hpp
vk/004_index_buffer/: main.cpp
vk/004_index_buffer/utils/: layers.hpp  physical_device.hpp  swapchain.hpp
vk/005_push_constants/: fragment.spv  main.cpp
vk/005_push_constants/utils/: buffer.hpp  memory.hpp  preprocessor.hpp  shader.hpp
